src/snapshots/rlox__test_runtime__assignment_in_condition.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"\n        var a = true;\n        if a = false {\n            print 1;\n        } else {\n            print 2;\n        }\n        \")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 3 │         if a = false {
   │              ┬  
   │              ╰── Invalid assignment at this expression depth
───╯


